name:          acme-everything
version:       2015.5.4
synopsis:      Install everything.
description:
    This package requires the entirety of Hackage to be built, most of it as
    transitive dependencies.

    The joke started when a colleague liked the
    @leftToMaybe :: Either a b -> Maybe a@ function from @either@, which has a
    *huge* footprint compared to the utility it provides.

    This got us thinking about seemingly small packages that have lots of hidden
    transitive dependencies, e.g. "only" @base@, @lens@ and @yesod@. And that's
    where `acme-everything` was born, which (transitively) depends on the
    entirety of Hackage.

license:       PublicDomain
author:        David Luposchainsky <dluposchainsky(λ)gmail.com>
maintainer:    David Luposchainsky <dluposchainsky(λ)gmail.com>
build-type:    Simple
homepage:      https://github.com/quchen/acme-everything
bug-reports:   https://github.com/quchen/acme-everything/issues
category:      ACME
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/quchen/acme-everything

library
    exposed-modules:  Acme.Everything
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >= 1 && <= 127
                    , ApproxFun-hs
                    , BufferedSocket
                    , Dist
                    , Earley
                    , FastxPipe
                    , SciFlow
                    , SeqAlign
                    , Shrub
                    , acme-safe
                    , acme-timemachine
                    , agentx
                    , bgzf
                    , bindings-fluidsynth
                    , bitcoin-api
                    , cabocha
                    , cmd-item
                    , computations
                    , crypto-classical
                    , dbcleaner
                    , diagrams-html5
                    , diagrams-pgf
                    , dicom
                    , dove
                    , ed25519-donna
                    , engine-io-growler
                    , ess
                    , flamingra
                    , flowlocks-framework
                    , geniplate-mirror
                    , ghc-prof-flamegraph
                    , gll
                    , hXmixer
                    , hashabler
                    , hipbot
                    , hmm-hmatrix
                    , hpack
                    , hsreadability
                    , hutton
                    , hvect
                    , ide-backend-server
                    , json-stream
                    , libconfig
                    , list-t-attoparsec
                    , list-t-html-parser
                    , list-t-http-client
                    , list-t-libcurl
                    , list-t-text
                    , mfsolve
                    , microlens-each
                    , microlens-mtl
                    , microlens-th
                    , mockery
                    , moonshine
                    , mosaico-lib
                    , mtl-c
                    , network-transport-amqp
                    , nf
                    , one-time-password
                    , pell
                    , pgp-wordlist
                    , random-derive
                    , record-aeson
                    , refined
                    , rspp
                    , sdr
                    , sendgrid-haskell
                    , singleton-nats
                    , smallcheck-series
                    , sorting
                    , spline3
                    , step-function
                    , test-invariant
                    , text-position
                    , th-context
                    , th-inline-io-action
                    , timezone-olson-th
                    , twentefp-eventloop-trees
                    , wai-request-spec
                    , yesod-gitrev
                    , yesod-transloadit
